database-mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-db-svc
spec:
  selector:
    app: mysql-db
    tier: backend
  ports:
    - port: 3306
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db-deployment
  labels:
    app: mysql-db
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-db
      tier: backend
  volumes:
    - name: pv-storage
      persistentVolumeClaim: pv-claim
  template:
    metadata:
      labels:
        app: mysql-db
        tier: backend
    spec:
      containers:
        - name: mysql-db
          image: mysql:5.5
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              name: pv-storage
