webportal-admin.yml
apiVersion: v1
kind: Service
metadata:
  name: webportal-admin-svc
spec:
  selector:
    app: webportal-admin
    tier: frontend
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webportal-admin-deployment
  labels:
    app: webportal-admin
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webportal-admin
      tier: frontend
  template:
    metadata:
      labels:
        app: webportal-admin
        tier: frontend
    spec:
      tolerations:
        - key: "tier"
          operator: "Equal"
          value: "frontend"
          effect: "NoSchedule"
      volumes:
        - name: db-user-pass
          secret:
            secretName: db-user-pass
      containers:
      - name: webportal-admin
        image: hshar/admin
        ports:
        - containerPort: 80
        volumeMounts:
          - name: db-user-pass
            mountPath: "/var/secrets"
            readOnly: true
