webportal-users.yml
apiVersion: v1
kind: Service
metadata:
  name: webportal-users-svc
spec:
  selector:
    app: webportal-users
    tier: frontend
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webportal-users-deployment
  labels:
    app: webportal-users
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webportal-users
      tier: frontend
  template:
    metadata:
      labels:
        app: webportal-users
        tier: frontend
    spec:
      volumes:
        - name: db-user-pass
          secret:
            secretName: db-user-pass
      containers:
      - name: webportal-users
        image: hshar/users
        ports:
          - containerPort: 80
        volumeMounts:
          - name: db-user-pass
            mountPath: "/var/secrets"
            readOnly: true
