ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example.com
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /users
        backend:
          serviceName: webportal-users-svc
          servicePort: 80
      - path: /admin
        backend:
          serviceName: webportal-admin-svc
          servicePort: 80
      - path: /
        backend:
          serviceName: webportal-users-svc
          servicePort: 80
